# openglengine

./: .gitignore  CMakeLists.txt  Doxyfile  list of possible needed headers
.gitignore/: .gitignore
data/: TEST.off  bunny1_8k.off  circle.off  gargoyle.off  gargoyle500.off  gargoyleRemeshed.off  hemisphere.off  plane.off  resSplitEdges.off  testCollapseEdges.off  testFlipEdge.off  testSplitEdge.off  tetrahedron.off
include/: baseGame.hpp  camera.hpp  debug.hpp  game.hpp  math_3d.hpp  model.hpp  modelLoader.hpp  renderer.hpp  shader.hpp  sprite.hpp  texture.hpp  vec3.hpp  vertex.hpp  vertexBuffer.hpp
shaders/: SimpleFragmentShader.fs  SimpleFragmentShader.fs~  SimpleVertexShader.vs  SimpleVertexShader.vs~
src/: baseGame.cpp  camera.cpp  debug.cpp  game.cpp  main.cpp  model.cpp  modelLoader.cpp  renderer.cpp  shader.cpp  vec3.cpp  vertex.cpp  vertexBuffer.cpp
